<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_background"
    android:orientation="vertical"
    android:padding="5.0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57.33dp"
        android:background="@drawable/about_header"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/xiaomi_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="9.78dp"
                android:text="@string/xiaomi_note"
                android:textColor="#ff4e4737"
                android:textSize="30.0sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/xiaomi_note"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7.0dip"
                android:layout_toRightOf="@id/xiaomi_note"
                android:gravity="bottom"
                android:text="@string/version"
                android:textColor="#ffcc0000"
                android:textSize="16.0sp" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="260dp"
        android:layout_height="18dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/notes_about_text" android:contentDescription="@string/tips"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="all"
        android:lineSpacingMultiplier="1.3"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/about_text"
        android:textColor="#ff000000"
        android:textColorLink="#ffda842f"
        android:textSize="14.0sp" />

    <Button
        android:id="@+id/btn_commend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/notes_about_commend"
        android:text="@string/commend"
        android:textSize="22.0sp" />

</LinearLayout>